// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > ProgressBar Matches snapshot when passed all props 1`] = `
<styled.div
  className="jest-auto-snapshots String Fixture"
>
  <styled.div
    progress="jest-auto-snapshots String Fixture"
  />
</styled.div>
`;

exports[`jest-auto-snapshots > ProgressBar Matches snapshot when passed only required props 1`] = `
<styled.div>
  <styled.div
    progress="jest-auto-snapshots String Fixture"
  />
</styled.div>
`;
